Cleaned up Store Operation and Updated index